// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box exports props compatible with itself 1`] = `
.emotion-0 {
  padding: regular;
  box-sizing: border-box;
}

<Fragment>
  <Noop />
  <div
    className="emotion-0"
  >
    Lalala
  </div>
</Fragment>
`;

exports[`Box supports appropriate element props based on "as" prop 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

<Fragment>
  <Noop />
  <a
    className="emotion-0"
    href="lol"
  />
</Fragment>
`;

exports[`Box supports appropriate element props based on "as" prop 2`] = `
.emotion-0 {
  box-sizing: border-box;
}

<Fragment>
  <Noop />
  <img
    className="emotion-0"
    src="lol"
  />
</Fragment>
`;

exports[`Box supports generic style props such as borderTop with or without "as" 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border-top: 42;
}

<Fragment>
  <Noop />
  <div
    className="emotion-0"
  />
</Fragment>
`;

exports[`Box supports generic style props such as borderTop with or without "as" 2`] = `
.emotion-0 {
  box-sizing: border-box;
  border-top: 42;
}

<Fragment>
  <Noop />
  <a
    className="emotion-0"
  />
</Fragment>
`;
